# gobject-meson

./: meson.build  run.sh  test.py
src/: example.c  example.h
